.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
00:40:17 **** Incremental Build of configuration Debug for project Clase13_ej1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase13_ej1.o" "..\\src\\Clase13_ej1.c" 
In file included from ..\src\Clase13_ej1.c:6:
..\src\alumno.h:46:34: error: unknown type name 'eCarrera'
   46 | void printAlumno(eAlumno alumno, eCarrera *arrayCarrera, int len);
      |                                  ^~~~~~~~
..\src\alumno.h:53:53: error: unknown type name 'eCarrera'
   53 | void printAlumnos(eAlumno *arrayAlumno, int lenAle, eCarrera *arrayCarrera,
      |                                                     ^~~~~~~~
..\src\Clase13_ej1.c: In function 'main':
..\src\Clase13_ej1.c:20:7: warning: unused variable 'salirSub' [-Wunused-variable]
   20 |  char salirSub = 'n';
      |       ^~~~~~~~
..\src\Clase13_ej1.c:19:7: warning: unused variable 'salir' [-Wunused-variable]
   19 |  char salir = 'n';
      |       ^~~~~
..\src\Clase13_ej1.c:16:11: warning: unused variable 'carreras' [-Wunused-variable]
   16 |  eCarrera carreras[] = { { 1000, "TUP", 0 }, { 1001, "TUSI", 0 }, { 1002,
      |           ^~~~~~~~
